--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col s12 center-align">
           <h1>WONDER VISION TEAM</h1>
@@ -23,26 +23,26 @@
     </div>
   </header>
   <section class="portfolio">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col s12">
           <h2>Projects</h2>
         </div>
       </div>
-      <div class="row center-align">
-        <div class="col m4 s12 box-inline">
+      <div class="portfolio--container center-align">
+        <div class="box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
               <a href="https://github.com/jess-s/SPAIC-DroneCV" target="_blank"><img src="images/git.png"></a>
             </div>
             <h3>Drone CV</h3>
             <div class="portfolio__img">
-              <img src="images\drone3.jpg" title ="Photo by Matt Pritchard on Unsplash" alt="Drone" class="center">
+              <img src="images\drone3.jpg" title="Photo by Matt Pritchard on Unsplash" alt="Drone" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>How can you use a drone to track objects or people? 
-                The team of the Drone Tracking study group have researched use cases, 
-                implemented tutorials and tried to find information how to integrate federated learning 
+              <p>How can you use a drone to track objects or people?
+                The team of the Drone Tracking study group have researched use cases,
+                implemented tutorials and tried to find information how to integrate federated learning
                 and differential privacy with a drone.</p>
             </div>
             <div class="contributors">
@@ -63,35 +63,37 @@
               </div>
               <div class="single-cont">
                 <a href="https://github.com/shashigharti" target="_blank">
-                <img src="https://avatars1.githubusercontent.com/u/5582809?s=400&v=4">
-              </a>
+                  <img src="https://avatars1.githubusercontent.com/u/5582809?s=400&v=4">
+                </a>
               </div>
               <div class="single-cont">
-                <a href= "https://github.com/arunn-thevapalan" target="_blank"> 
-                <img src="https://avatars2.githubusercontent.com/u/43150751?s=400&v=4">
-              </a>
+                <a href="https://github.com/arunn-thevapalan" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/43150751?s=400&v=4">
+                </a>
               </div>
               <div class="single-cont">
                 <a href="https://github.com/TemitopeOladokun" target="_blank">
-                <img src="https://avatars3.githubusercontent.com/u/50429511?s=400&v=4">
-              </a>
+                  <img src="https://avatars3.githubusercontent.com/u/50429511?s=400&v=4">
+                </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col m4 s12 box-inline">
+        <div class="box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-              <a href="https://github.com/depo-egy/Wonder_Vision_Lane_Detection" target="_blank"><img src="images/git.png"></a>
+              <a href="https://github.com/depo-egy/Wonder_Vision_Lane_Detection" target="_blank"><img
+                  src="images/git.png"></a>
             </div>
             <h3>Lane Detection</h3>
             <div class="portfolio__img">
-              <img src="images\lane.jpg" title ="Photo by Dardan on Unsplash" alt="Lane" class="center">
+              <img src="images\lane.jpg" title="Photo by Dardan on Unsplash" alt="Lane" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>This project focuses on identification of 
-                lanes of the road. Using various approaches and frameworks including but not limited to OpenCV and PyTorch.
-                This model is to be used in drones, self driving cars and surveillance systems. 
+              <p>This project focuses on identification of
+                lanes of the road. Using various approaches and frameworks including but not limited to OpenCV and
+                PyTorch.
+                This model is to be used in drones, self driving cars and surveillance systems.
               </p>
             </div>
             <div class="contributors">
@@ -101,121 +103,122 @@
                 </a>
               </div>
               <div class="single-cont">
-                  <a href="https://github.com/oudarjya718" target="_blank">
-                    <img src="https://avatars0.githubusercontent.com/u/36289901?s=400&v=44">
-                  </a>
-                </div>
-                <div class="single-cont">
-                    <a href="https://github.com/depo-egy" target="_blank">
-                      <img src="https://avatars3.githubusercontent.com/u/32489701?s=400&v=4">
-                    </a>
-                  </div>
-                  <div class="single-cont">
-                      <a href="https://github.com/shiv-u" target="_blank">
-                        <img src="https://avatars3.githubusercontent.com/u/29162160?s=400&v=4">
-                      </a>
-                    </div>
-                    <div class="single-cont">
-                        <a href="https://github.com/drvigneshwari" target="_blank">
-                          <img src="https://avatars0.githubusercontent.com/u/50787118?s=400&v=4">
-                        </a>
-                      </div>
+                <a href="https://github.com/oudarjya718" target="_blank">
+                  <img src="https://avatars0.githubusercontent.com/u/36289901?s=400&v=44">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/depo-egy" target="_blank">
+                  <img src="https://avatars3.githubusercontent.com/u/32489701?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/shiv-u" target="_blank">
+                  <img src="https://avatars3.githubusercontent.com/u/29162160?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/drvigneshwari" target="_blank">
+                  <img src="https://avatars0.githubusercontent.com/u/50787118?s=400&v=4">
+                </a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col m4 s12 box-inline">
+        <div class="box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-                <a href="https://github.com/poojavinod100/People-Counting-Crowd-Density-Detection" target="_blank">
-                  <img src="images/git.png"></a>
+              <a href="https://github.com/poojavinod100/People-Counting-Crowd-Density-Detection" target="_blank">
+                <img src="images/git.png"></a>
             </div>
             <h3>Crowd density</h3>
             <div class="portfolio__img">
-              <img src="images\crowd.jpg" title ="Photo by chuttersnap on Unsplash" alt="Crowd" class="center">
+              <img src="images\crowd.jpg" title="Photo by chuttersnap on Unsplash" alt="Crowd" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>The main objective of this project is to build a self-sufficient software, 
-                that can accurately predict whether or not a stampede is imminent, based on the incoming live visuals of a place.</p>
+              <p>The main objective of this project is to build a self-sufficient software,
+                that can accurately predict whether or not a stampede is imminent, based on the incoming live visuals of
+                a place.</p>
             </div>
             <div class="contributors">
-                <div class="single-cont">
-                    <a href="https://github.com/944893426" target="_blank">
-                    <img src="https://avatars0.githubusercontent.com/u/37170206?s=400&v=4">
-                  </a> 
-                </div>
-                  <div class="single-cont">
-                      <a href="https://github.com/q-viper" target="_blank">
-                      <img src="https://avatars2.githubusercontent.com/u/35986908?s=400&v=4">
-                    </a>
-                  </div>
-                  <div class="single-cont">
-                      <a href="https://github.com/SreekanthZipsy" target="_blank">
-                      <img src="https://avatars2.githubusercontent.com/u/30560398?s=400&v=4">
-                    </a>
-                  </div>
-                  <div class="single-cont">
-                      <a href="https://github.com/poojavinod100" target="_blank">
-                      <img src="https://avatars2.githubusercontent.com/u/37141925?s=400&v=4">
-                    </a>
-                  </div>
+              <div class="single-cont">
+                <a href="https://github.com/944893426" target="_blank">
+                  <img src="https://avatars0.githubusercontent.com/u/37170206?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/q-viper" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/35986908?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/SreekanthZipsy" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/30560398?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/poojavinod100" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/37141925?s=400&v=4">
+                </a>
+              </div>
             </div>
           </div>
         </div>
         <div class="col m4 s12 box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-                <a href="https://github.com/JauraSeerat/Wonder_Vision_Face_Detection" target="_blank">
-                   <img src="images/git.png"></a>
+              <a href="https://github.com/JauraSeerat/Wonder_Vision_Face_Detection" target="_blank">
+                <img src="images/git.png"></a>
             </div>
             <h3>Face detection</h3>
             <div class="portfolio__img">
-              <img src="images\face.jpg" title ="Photo by Andrew Seaman on Unsplash" alt="Faces" class="center">
+              <img src="images\face.jpg" title="Photo by Andrew Seaman on Unsplash" alt="Faces" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>The objective of the project is to calculate the similarity between two facial images. 
+              <p>The objective of the project is to calculate the similarity between two facial images.
                 We forseee this application being used for recognizing known faces like in a visual attendence system
-                 or as a face based login.</p>
+                or as a face based login.</p>
             </div>
             <div class="contributors">
-                <div class="single-cont">
-                    <a href="https://github.com/Tandon-A" target="_blank">
-                    <img src="https://avatars1.githubusercontent.com/u/37059580?s=400&v=4">
-                  </a>
-                </div>
-                <div class="single-cont">
-                    <a href="https://github.com/JauraSeerat" target="_blank">
-                    <img src="https://avatars2.githubusercontent.com/u/46867415?s=400&v=4">
-                  </a>
-                </div>
-                <div class="single-cont">
-                    <a href="https://github.com/rupeshpurum" target="_blank">
-                    <img src="https://avatars2.githubusercontent.com/u/38237894?s=400&v=4">
-                  </a>
-                </div>
-                <div class="single-cont">
-                    <a href="https://github.com/agatagruza" target="_blank">
-                    <img src="https://avatars2.githubusercontent.com/u/7014697?s=400&v=4">
-                  </a>
-                </div>
-                <div class="single-cont">
-                    <a href="https://github.com/agalindom" target="_blank">
-                    <img src="https://avatars2.githubusercontent.com/u/40073517?s=400&v=4">
-                  </a>
-                </div>
-                <div class="single-cont">
-                    <a href="https://github.com/adventuroussrv" target="_blank">
-                    <img src="https://avatars2.githubusercontent.com/u/31799654?s=400&v=4">
-                  </a>
-                </div>
-                <div class="single-cont">
-                    <a href="https://github.com/Joyce-O" target="_blank">
-                    <img src="https://avatars3.githubusercontent.com/u/26967919?s=400&v=4">
-                  </a>
-                </div>
+              <div class="single-cont">
+                <a href="https://github.com/Tandon-A" target="_blank">
+                  <img src="https://avatars1.githubusercontent.com/u/37059580?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/JauraSeerat" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/46867415?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/rupeshpurum" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/38237894?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/agatagruza" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/7014697?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/agalindom" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/40073517?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/adventuroussrv" target="_blank">
+                  <img src="https://avatars2.githubusercontent.com/u/31799654?s=400&v=4">
+                </a>
+              </div>
+              <div class="single-cont">
+                <a href="https://github.com/Joyce-O" target="_blank">
+                  <img src="https://avatars3.githubusercontent.com/u/26967919?s=400&v=4">
+                </a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col m4 s12 box-inline">
+        <div class="box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
               <a href="https://github.com/edgarinvillegas/finder-drone-ai" target="_blank">
@@ -223,19 +226,22 @@
             </div>
             <h3>Finder Drone</h3>
             <div class="portfolio__img">
-              <img src="images\cat.jpg" title ="Photo by Borna Bevanda and William Daigneault on Unsplash" alt="Drone" class="center">
+              <img src="images\cat.jpg" title="Photo by Borna Bevanda and William Daigneault on Unsplash" alt="Drone"
+                class="center">
             </div>
             <div class="protfolio__desc">
-              <p>A project to find anything with a drone! Use case is with cats, drone will find a cat based on videos of it.
-                Please check the summarized presentation <a href="https://www.youtube.com/watch?v=GN3oGCZcUi4" target="_blank">video.
+              <p>A project to find anything with a drone! Use case is with cats, drone will find a cat based on videos
+                of it.
+                Please check the summarized presentation <a href="https://www.youtube.com/watch?v=GN3oGCZcUi4"
+                  target="_blank">video.
                 </a></p>
             </div>
             <div class="contributors">
               <div class="single-cont">
                 <a href="https://github.com/edgarinvillegas" target="_blank">
-                <img src="https://avatars2.githubusercontent.com/u/255083?s=400&v=4">
-              </a>
-            </div>
+                  <img src="https://avatars2.githubusercontent.com/u/255083?s=400&v=4">
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -243,19 +249,20 @@
     </div>
   </section>
   <footer>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col m6 s12">
           <h3>ABOUT US</h3>
-          <p>Wonder Vision was initiated by <a href="https://github.com/mahakbansal" target="_blank">Mahak Bansal</a> in the Secure and Private AI Scholarship Challenge by Facebook
+          <p>Wonder Vision was initiated by <a href="https://github.com/mahakbansal" target="_blank">Mahak Bansal</a> in
+            the Secure and Private AI Scholarship Challenge by Facebook
             and Udacity. These scholars have been the organisers of the group:
-            <a href="https://github.com/mahakbansal" target="_blank">Mahak Bansal</a>, 
-            <a href="https://github.com/shashigharti" target="_blank">Shashi Gharti</a>, 
-            <a href="https://github.com/Joyce-O" target="_blank">Joyce Obi</a>, 
+            <a href="https://github.com/mahakbansal" target="_blank">Mahak Bansal</a>,
+            <a href="https://github.com/shashigharti" target="_blank">Shashi Gharti</a>,
+            <a href="https://github.com/Joyce-O" target="_blank">Joyce Obi</a>,
             <a href="https://github.com/JauraSeerat" target="_blank">Seeratpal K. Jaura</a>
-            and <a href="https://github.com/helenabarmer" target="_blank">Helena Barmer</a>. 
+            and <a href="https://github.com/helenabarmer" target="_blank">Helena Barmer</a>.
             The group eventually divided into subgroups working on implementing real time object detection and tracking.
-        </p>
+          </p>
         </div>
         <div class="col m6 s12">
           <h3>TEAM LEADERS</h3>
