--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <header>
     <div class="container-fluid">
       <div class="row">
+        <div class="logo">
+          <img src="images\vision-logo.png">
+        </div>
         <div class="col s12 center-align">
           <h1>WONDER VISION TEAM</h1>
         </div>
