--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
             </div>
             <h3>Finder Drone</h3>
             <div class="portfolio__img">
-              <img src="images\cat.jpg" title="Photo by Borna Bevanda and William Daigneault on Unsplash" alt="Drone"
-                class="center">
+              <img src="images\catdrone.png" title="Photo by Borna Bevanda and William Daigneault on Unsplash"
+                alt="Drone" class="center">
             </div>
             <div class="protfolio__desc">
               <p>A project to find anything with a drone! Use case is with cats, drone will find a cat based on videos
