--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>Wonder Vision</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
@@ -13,11 +14,8 @@
   <header>
     <div class="container-fluid">
       <div class="row">
-        <div class="logo">
+        <div class="col s12">
           <img src="images\vision-logo.png">
-        </div>
-        <div class="col s12 center-align">
-          <h1>WONDER VISION TEAM</h1>
         </div>
         <div class="col s12 right-align">
           <a href="#">Project Showcase Challenge</a>
